--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider a $N \\times N$ matrix $\\mathbf{A}$ that is symmetric and admits an LU decomposition, e.g., the matrix $\\mathbf{A}$ satisfies the following equation:"
+    "Consider a $N \\times N$ matrix $\\mathbf{A}$ that is symmetric and admits an LU decomposition, e.g., the matrix $\\mathbf{A}$ satisfies the following equations:"
    ]
   },
   {
@@ -19,7 +19,10 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{A} = \\mathbf{L} \\, \\mathbf{U} \\: .\n",
+    "\\begin{split}\n",
+    "\\mathbf{A} &= \\mathbf{A}^{\\top} \\\\\n",
+    "\\mathbf{A} &= \\mathbf{L} \\, \\mathbf{U}\n",
+    "\\end{split}\\: .\n",
     "$$"
    ]
   },
@@ -67,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which means that $\\mathbf{L}^{-1} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top}$ and, consequently, $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$ are symmetric matrices. Now, let's analyze the matrix $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$. First, consider two square matrices $\\mathbf{B}$ and $\\mathbf{C}$. Then, bear in mind that:\n",
+    "which means that $\\mathbf{L}^{-1} \\, \\mathbf{A} \\, \\mathbf{L}^{-\\top}$ **and, consequently,** $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$ **are symmetric matrices**. Now, let's analyze the matrix $\\mathbf{U} \\, \\mathbf{L}^{-\\top}$. First, consider two square matrices $\\mathbf{B}$ and $\\mathbf{C}$. Then, bear in mind that:\n",
     "\n",
     "1. If $\\mathbf{B}$ is upper (lower) triangular, then $\\mathbf{B}^{-1}$ is also upper (lower) triangular;\n",
     "\n",
@@ -218,6 +221,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In a most rigorous definition (Golub and Van Loan, 2013):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**THEOREM:** If $\\mathbf{A} \\in \\mathbb{R}^{N \\times N}$ is symmetric and the principal submatrix $\\mathbf{A} \\left[1:k \\, , 1:k \\right]$ is nonsingular for $k = 1 : N-1$, then there exists a unit lower triangular matrix $\\mathbf{L} \\in \\mathbb{R}^{N \\times N}$ and a diagonal matrix $\\mathbf{D} \\in \\mathbb{R}^{N \\times N}$ such that $\\mathbf{A} = \\mathbf{L} \\mathbf{D} \\mathbf{L}^{\\top}$. The factorization is unique."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "It can be shown that, given a symmetric matrix $\\mathbf{A}$, the matrices $\\mathbf{L}$ and $\\mathbf{D}$ can be calculated as follows:"
    ]
   },
@@ -227,13 +244,13 @@
     "collapsed": false
    },
    "source": [
-    "    for j in range(N):\n",
+    "    for j = 1:N\n",
     "\n",
-    "        v = L[j,:j]*d[:j]\n",
+    "        v = L[j,:j-1]*d[:j-1]\n",
     "\n",
-    "        d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
+    "        d[j] = A[j,j] - np.dot(L[j,:j-1], v[:j-1])\n",
     "\n",
-    "        L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]"
+    "        L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j-1],v[:j-1]))/d[j]"
    ]
   },
   {
@@ -247,7 +264,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solving a linear system bu applying the LDL<sup>T</sup> decomposition"
+    "The two images below present a \"proof\" of this algorithm for the particular case in which $N = 4$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='LDLt_decomposition_sketch_1.JPG' width = 600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='LDLt_decomposition_sketch_2.JPG' width = 600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solving a linear system by applying the LDL<sup>T</sup> decomposition"
    ]
   },
   {
@@ -270,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{A}$ is a square symmetric matrix that admitis a LU decomposition. In this case, the linear system can be rewritten as follows:"
+    "where $\\mathbf{A}$ is a square symmetric matrix that admits a LU decomposition. In this case, the linear system can be rewritten as follows:"
    ]
   },
   {
@@ -322,7 +360,7 @@
     "\n",
     "3. Test if `A` = `LDL`<sup>T</sup>\n",
     "\n",
-    "4. Test your solution of the linear system againt the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
+    "4. Test your solution of the linear system agaisnt the solution obtained by using the routine [`numpy.linalg.solve`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.solve.html)"
    ]
   },
   {
