--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -515,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "THEOREM: If $\\mathbf{A} \\in \\mathbb{R}^{N \\times N}$ and $\\text{det} \\left( \\mathbf{A} \\left[1:k \\, , 1:k \\right] \\right) \\ne 0$ for $k = 1 : N-1$, then there exists a lower triangular matrix $\\mathbf{L} \\in \\mathbb{R}^{N \\times N}$ and an upper triangular matrix $\\mathbf{U} \\in \\mathbb{R}^{N \\times N}$ such that $\\mathbf{A} = \\mathbf{L} \\mathbf{U}$. If this is the case and $\\mathbf{A}$ is nonsingular, then the factorization is unique and $\\text{det} \\left( \\mathbf{A} \\right) = u_{11} \\cdots u_{NN}$."
+    "**THEOREM:** If $\\mathbf{A} \\in \\mathbb{R}^{N \\times N}$ and $\\text{det} \\left( \\mathbf{A} \\left[1:k \\, , 1:k \\right] \\right) \\ne 0$ for $k = 1 : N-1$, then there exists a lower triangular matrix $\\mathbf{L} \\in \\mathbb{R}^{N \\times N}$ and an upper triangular matrix $\\mathbf{U} \\in \\mathbb{R}^{N \\times N}$ such that $\\mathbf{A} = \\mathbf{L} \\mathbf{U}$. If this is the case and $\\mathbf{A}$ is nonsingular, then the factorization is unique and $\\text{det} \\left( \\mathbf{A} \\right) = u_{11} \\cdots u_{NN}$."
    ]
   },
   {
