--- a/Content/chol_decomp.ipynb
+++ b/Content/chol_decomp.ipynb
@@ -87,14 +87,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='Cholesky_decomposition_sketch_1.JPG' width = 600>"
+    "<img src='Cholesky_decomposition_sketch_1.JPEG' width = 600>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='Cholesky_decomposition_sketch_2.JPG' width = 600>"
+    "<img src='Cholesky_decomposition_sketch_2.JPEG' width = 600>"
    ]
   },
   {
