tentative correction of the links

--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -271,14 +271,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='LDLt_decomposition_sketch_1.JPG' width = 500>"
+    "<img src='LDLt_decomposition_sketch_1.jpg' width = 600>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='LDLt_decomposition_sketch_2.JPG' width = 500>"
+    "<img src='LDLt_decomposition_sketch_2.jpg' width = 600>"
    ]
   },
   {
