correct some errors in the exercises 14, 15, and 16

--- a/Content/lu_decomp_intro.ipynb
+++ b/Content/lu_decomp_intro.ipynb
@@ -535,7 +535,7 @@
     "\n",
     "2. Use the calculated matrices `L` and `U` for solving a linear system `Ax = y`. The code must use the functions you have created for solving lower and upper triangular systems.\n",
     "\n",
-    "3. Use the `numpy.allclose` to compare (a) the original matrix `A` to the product `LU` and (b) the solution of the linear system  obtained by your LU code to the solution obtained by `numpy.solve(A,y)`."
+    "3. Use the `numpy.allclose` to compare (a) the original matrix `A` to the product `LU` and (b) the solution of the linear system  obtained by your LU code to the solution obtained by `numpy.linalg.solve(A,y)`."
    ]
   },
   {
