--- a/Content/gauss-elim-pivoting.ipynb
+++ b/Content/gauss-elim-pivoting.ipynb
@@ -746,7 +746,7 @@
     "\n",
     "2. Use the function implemented in a previous class for solving the equivalent (upper) triangular system `Bx = z`.\n",
     "\n",
-    "3. Use the `code-template.ipynb` to test your code against `np.dot(A,y)`."
+    "3. Use the `code-template.ipynb` to compare your code to `np.linalg.solve(A,y)`."
    ]
   },
   {
@@ -843,7 +843,7 @@
    "source": [
     "1. Use your Gauss elimination code for calculating the inverse of a matrix. The code must receive a matrix `A` and calculate its inverse, column by column.\n",
     "\n",
-    "2. Use the `code-template.ipynb` to test your code against `np.inv(A)`."
+    "2. Use the `code-template.ipynb` to compare your code to `np.linalg.inv(A)`."
    ]
   },
   {
