require the use of previously implemented functions

--- a/Content/polynomial.ipynb
+++ b/Content/polynomial.ipynb
@@ -122,9 +122,9 @@
    "source": [
     "1. Load the file `synthetic_gravity_data/gravity_anomaly_profile.txt` by using the routine [`numpy.loadtxt`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.loadtxt.html). \n",
     "\n",
-    "2. Create a function `pol1d_coeffs` to calculate the coefficients of a one-dimensional polynomial that fits a gravity profile. The function must receive the data coordinates `x` and the degree `D` of the polynomial and return a 1d-array `p` containing the coefficients of the polynomial. Use the `code-template.ipynb` and create a test for validating the function `pol1d_coeffs`.\n",
+    "2. Create a function `pol1d_coeffs` to calculate the coefficients of a one-dimensional polynomial that fits a gravity profile. The function must receive the data coordinates `x` and the degree `D` of the polynomial and return a 1d-array `p` containing the coefficients of the polynomial. Use the `code-template.ipynb` and create a test for validating the function `pol1d_coeffs`. Use your previous functions for calculating any matrix operation and/or solving any the linear system.\n",
     "\n",
-    "3. Create a function `pol1d_interpol` to interpolate gravity data on a profile. The function must receive the interpolating points `x0` and the 1d-array of coefficients `p` calculated with the function `pol1d_coeffs` and return a 1d-array containing the interpolated points. Use the `code-template.ipynb` and create a test for validating the function `pol1d_interpol`.\n",
+    "3. Create a function `pol1d_interpol` to interpolate gravity data on a profile. The function must receive the interpolating points `x0` and the 1d-array of coefficients `p` calculated with the function `pol1d_coeffs` and return a 1d-array containing the interpolated points. Use the `code-template.ipynb` and create a test for validating the function `pol1d_interpol`. Use your previous functions for calculating any matrix operation.\n",
     "\n",
     "4. Use the functions `pol1d_coeffs` and `pol1d_interpol` to interpolate the gravity data on a regular profile. Plot a Figure similar to the gravity profile shown above containing: (i) the original data (black dots on the gravity profile) and (ii) the interpolated points."
    ]
@@ -142,9 +142,9 @@
    "source": [
     "1. Load the file `synthetic_gravity_data/gravity_anomaly.txt` by using the routine [`numpy.loadtxt`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.loadtxt.html). \n",
     "\n",
-    "2. Create a function `pol2d_coeffs` to calculate the coefficients of a two-dimensional polynomial that fits a gravity map. The function must receive the data coordinates `x` and `y`, as well as the degree `D` of the polynomial, and return a 1d-array `p` containing the coefficients of the polynomial. Use the `code-template.ipynb` and create a test for validating the function `pol2d_coeffs`.\n",
+    "2. Create a function `pol2d_coeffs` to calculate the coefficients of a two-dimensional polynomial that fits a gravity map. The function must receive the data coordinates `x` and `y`, as well as the degree `D` of the polynomial, and return a 1d-array `p` containing the coefficients of the polynomial. Use the `code-template.ipynb` and create a test for validating the function `pol2d_coeffs`. Use your previous functions for calculating any matrix operation and/or solving any the linear system.\n",
     "\n",
-    "3. Create a function `pol2d_interpol` to interpolate gravity data on a regular grid. The function must receive the interpolating points `x0` and `y0`, as well as the 1d-array of coefficients `p` calculated with the function `pol2d_coeffs`, and return a 1d-array containing the interpolated points. Use the `code-template.ipynb` and create a test for validating the function `pol2d_interpol`.\n",
+    "3. Create a function `pol2d_interpol` to interpolate gravity data on a regular grid. The function must receive the interpolating points `x0` and `y0`, as well as the 1d-array of coefficients `p` calculated with the function `pol2d_coeffs`, and return a 1d-array containing the interpolated points. Use the `code-template.ipynb` and create a test for validating the function `pol2d_interpol`. Use your previous functions for calculating any matrix operation.\n",
     "\n",
     "4. Use the functions `pol2d_coeffs` and `pol2d_interpol`to interpolate gravity data on a regular grid. Plot a Figure similar to the gravity map shown above containing: (i) the original data (black dots on the gravity map) and (ii) the interpolated points."
    ]
