require the previous functions

--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -186,7 +186,7 @@
     "\n",
     "2. Create the matrix $\\mathbf{A}$ and the data vector $\\mathbf{d}$.\n",
     "\n",
-    "3. Create a function `grav_net` that receives $\\mathbf{A}$ and $\\mathbf{g}$ and returns the parameter vector $\\mathbf{g}$ by applying the Least Squares Estimator.\n",
+    "3. Create a function `grav_net` that receives $\\mathbf{A}$ and $\\mathbf{g}$ and returns the parameter vector $\\mathbf{g}$ by applying the Least Squares Estimator. Use your previously implemented functions for calculating any matrix operation and/or solving any linear system.\n",
     "\n",
     "4. Use the `code-template.ipynb` and compare the estimated parameter vector with the simulated parameter vector by using the routine  `numpy.allclose`."
    ]
