correct small errors

--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {
       "image/jpeg": {
        "width": 700
@@ -186,7 +186,7 @@
     "\n",
     "2. Create the matrix $\\mathbf{A}$ and the data vector $\\mathbf{d}$.\n",
     "\n",
-    "3. Create a function `grav_net` that receives $\\mathbf{A}$ and $\\mathbf{g}$ and returns the parameter vector $\\mathbf{g}$ by applying the Least Squares Estimator. Use your previously implemented functions for calculating any matrix operation and/or solving any linear system.\n",
+    "3. Create a function `grav_net` that receives $\\mathbf{A}$ and $\\mathbf{g}$ and returns the estimated parameter vector $\\mathbf{g}$ by applying the Least Squares Estimator. Use your previously implemented functions for calculating any matrix operation and/or solving any linear system.\n",
     "\n",
     "4. Use the `code-template.ipynb` and compare the estimated parameter vector with the simulated parameter vector by using the routine  `numpy.allclose`."
    ]
@@ -207,9 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -219,12 +219,12 @@
     "\n",
     "delta_g = 200.0 # gravity variation in mGal\n",
     "\n",
-    "g = np.random.normal(loc=0., scale=delta_g, size=N) # simulated parameter vector"
+    "g = g0 + np.random.normal(loc=0., scale=delta_g, size=N) # simulated parameter vector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -233,18 +233,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: g0 = -113.53597 mGal\n",
-      "node 1: g1 = -116.46866 mGal\n",
-      "node 2: g2 =  162.24997 mGal\n",
-      "node 3: g3 =  -65.75842 mGal\n",
-      "node 4: g4 =  -18.65704 mGal\n",
-      "node 5: g5 = -313.76763 mGal\n"
+      "node 0: g0 = 978811.06527 mGal\n",
+      "node 1: g1 = 978781.33842 mGal\n",
+      "node 2: g2 = 978731.33639 mGal\n",
+      "node 3: g3 = 978900.06674 mGal\n",
+      "node 4: g4 = 978953.01566 mGal\n",
+      "node 5: g5 = 979047.27259 mGal\n"
      ]
     }
    ],
    "source": [
     "for i, gi in enumerate(g):\n",
-    "    print 'node %d: g%d = %10.5f mGal' % (i, i, g[i])"
+    "    print 'node %d: g%d = %12.5f mGal' % (i, i, g[i])"
    ]
   },
   {
