correct a small error in the text

--- a/Content/newton-cotes.ipynb
+++ b/Content/newton-cotes.ipynb
@@ -346,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $s(\\eta)$ is the reciprocal of the seismic velocity (or *slowness*). Some references were listed below for those readers interested in this *vertical seismic profiling*:"
+    "where $s(\\eta)$ is the reciprocal of the seismic velocity (or *slowness*). Some references were listed below for those readers interested in *vertical seismic profiling*:"
    ]
   },
   {
