--- a/Content/fd.ipynb
+++ b/Content/fd.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finite differences"
+    "# Finite differences - introduction"
    ]
   },
   {
