reorganize the auxiliary figures and write the fd_intro

--- a/Content/grav_net.ipynb
+++ b/Content/grav_net.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {
       "image/jpeg": {
        "width": 700
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "img('grav_net.jpg', width=700)"
+    "img('grav_net/grav_net.jpg', width=700)"
    ]
   },
   {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -233,12 +233,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: g0 = 978811.06527 mGal\n",
-      "node 1: g1 = 978781.33842 mGal\n",
-      "node 2: g2 = 978731.33639 mGal\n",
-      "node 3: g3 = 978900.06674 mGal\n",
-      "node 4: g4 = 978953.01566 mGal\n",
-      "node 5: g5 = 979047.27259 mGal\n"
+      "node 0: g0 = 978660.50183 mGal\n",
+      "node 1: g1 = 978876.52885 mGal\n",
+      "node 2: g2 = 978974.25627 mGal\n",
+      "node 3: g3 = 979011.70544 mGal\n",
+      "node 4: g4 = 979216.65387 mGal\n",
+      "node 5: g5 = 979203.79624 mGal\n"
      ]
     }
    ],
