--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -271,14 +271,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='LDLt_decomposition_1.jpg' width = 600>"
+    "<img src='ldlt_decomp/LDLt_decomposition_1.jpg' width = 600>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='LDLt_decomposition_2.jpg' width = 600>"
+    "<img src='ldlt_decomp/LDLt_decomposition_2.jpg' width = 600>"
    ]
   },
   {
