correct small errors

--- a/Content/fd_intro.ipynb
+++ b/Content/fd_intro.ipynb
@@ -843,7 +843,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For specific input values (`C0`, `alpha`, `T`, `N`, `theta`), the three schemes presented here (FE, BE, and CN) generate the same result `u_test`. Let's consider, for exampla, a `u_test` given by:"
+    "For specific input values (`C0`, `alpha`, `T`, `N`, `theta`), the three schemes presented here (FE, BE, and CN) generate the same result `u_test`. Let's consider, for example, a `u_test` given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{split}\n",
+    "u^{0}_{test} &= 1.0 \\\\\n",
+    "u^{1}_{test} &= 0.5 \\\\\n",
+    "u^{2}_{test} &= 0.5^{2} \\\\\n",
+    "u^{3}_{test} &= 0.5^{3} \\\\\n",
+    "& \\: \\: \\vdots \\\\\n",
+    "u^{N}_{test} &= 0.5^{N}\n",
+    "\\end{split}\n",
+    "$$"
    ]
   },
   {
