--- a/Content/fd_intro1.ipynb
+++ b/Content/fd_intro1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finite differences - introduction"
+    "# Finite differences - introduction - part 1"
    ]
   },
   {
