fd intro part 2

--- a/Content/fd_intro1.ipynb
+++ b/Content/fd_intro1.ipynb
@@ -39,7 +39,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$u^{\\prime}(t) = -\\alpha \\, u(t) \\: , \\quad t > 0 \\: ,$"
+    "$$\n",
+    "u^{\\prime}(t) = -\\alpha \\, u(t) \\: , \\quad 0 > t < T \\: ,\n",
+    "$$"
    ]
   },
   {
@@ -943,7 +945,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 28a"
+    "### Exercise 28"
    ]
   },
   {
