finalize the fd intro 2

--- a/Content/fd_intro2.ipynb
+++ b/Content/fd_intro2.ipynb
@@ -403,14 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, the finite difference approximations are modified according to the cells below."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### FE scheme ($\\theta$ = 0)"
+    "In this case, the algorithm is modified according to the cell below:"
    ]
   },
   {
@@ -418,7 +411,9 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "u^{n+1} = u^{n} + \\left(-\\alpha^{n} \\, u^{n} + f^{n} \\right) \\Delta \\, t \\: ,\n",
+    "u^{n+1} = \\frac{\\left[ 1 - \\left( \\, 1 - \\theta \\, \\right) \\alpha^{\\, n} \\Delta t \\right] u^{n} +\n",
+    "\\Delta t \\, \\left[ \\left( \\, 1 - \\theta \\, \\right) f^{n} + \\theta \\, f^{n+1} \\right] }\n",
+    "{1 + \\theta \\, \\alpha^{\\, n+1} \\Delta t} \\: ,\n",
     "$$"
    ]
   },
@@ -426,23 +421,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\alpha^{n} \\approx \\alpha(t_{n})$ and $f^{n} \\approx f(t_{n})$."
+    "where $\\alpha^{\\, n} \\approx \\alpha(t_{n})$, $\\alpha^{\\, n+1} \\approx \\alpha(t_{n+1})$, $f^{n} \\approx f(t_{n})$, and $f^{n+1} \\approx f(t_{n+1})$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise (extra)"
+    "For readers interested in more generalizations, I recommend see the section [Generalizations](https://hplgit.github.io/decay-book/doc/pub/book/sphinx/._book006.html#generalizations) of the Professor Hans' book."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise (extra)"
    ]
   },
   {
@@ -450,7 +443,8 @@
    "metadata": {},
    "source": [
     "1. Use the code implemented in the part 1 for verifying the stability conditions of the FE, Be, and CN schemes.\n",
-    "2. Modify the code implemented in the part 1 for including a variable coefficient and a term source."
+    "2. Modify the code implemented in the part 1 for including a variable coefficient and a term source.\n",
+    "3. Test the new code with a [constant solution](https://hplgit.github.io/decay-book/doc/pub/book/sphinx/._book006.html#verifying-a-constant-solution) and a [linear solution](https://hplgit.github.io/decay-book/doc/pub/book/sphinx/._book006.html#verification-via-manufactured-solutions)."
    ]
   },
   {
