fourier transform 1D - introduction

--- a/Content/triangular_matrices.ipynb
+++ b/Content/triangular_matrices.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "1. Create a function that calculates the product `Ux`. The function must receive the upper matrix `U` and the vector `x`.\n",
     "2. Create a function that calculates the product `Lx`. The function must receive the upper matrix `L` and the vector `x`.\n",
-    "3. Use the `code-template.ipynb` for testing the two functions against the Python code shown below:"
+    "3. Use the `code-template.ipynb` for comparing the two functions and the Python code shown below:"
    ]
   },
   {
@@ -353,20 +353,12 @@
    "source": [
     "np.dot(L,x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -380,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
