--- a/Content/fourier_1D_intro1.ipynb
+++ b/Content/fourier_1D_intro1.ipynb
@@ -40,7 +40,7 @@
     "    * [Calculating $a_{n}$ and $b_{n}$ by using the orthogonalyty relations between sine and cosine functions](#subsec2.1)\n",
     "\n",
     "\n",
-    "* [Exercise - extra](#ex-extra)"
+    "* [Exercise - extra](#ex-extra-intro1)"
    ]
   },
   {
@@ -710,7 +710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='ex-extra'></a>\n",
+    "<a id='ex-extra-intro1'></a>\n",
     "\n",
     "## Exercise - extra"
    ]
